# SentinelAI

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
app/: __init__.py  cli.py  config.py  executor.py  invoice.py  llm.py  logger.py  main.py  prompts.py  schemas.py  structured.py
app/analysis/: __init__.py  analyzer.py
app/api/: deps.py  errors.py  router.py  schemas.py
app/db/: __init__.py
app/db/migrations/: env.py
app/db/models/: __init__.py  document.py  execution.py  span.py  trace.py
app/db/repositories/: __init__.py  base.py  document_repository.py  execution_repository.py  postgres_document_repository.py  postgres_execution_repository.py  postgres_trace_repository.py  trace_repository.py
app/planner/: planner.py  prompts.py  schemas.py
app/retriever/: __init__.py  chunker.py  embeddings.py  qdrant_store.py  registry.py  retriever.py  schemas.py  vector_store.py
app/services/: orchestrator.py
app/tracing/: __init__.py  context.py  decorators.py  persistence.py  schemas.py  tracer.py
app/verifier/: __init__.py  schemas.py  verifier.py
docs/: architecture.md  public-api.md
examples/: __init__.py
examples/customer_support_demo/: README.md
examples/rag_demo/: README.md
examples/reference_runtime/: README.md  __init__.py  cli.py  config.py  errors.py  executor.py  invoice.py  llm.py  main.py  model_plugs.py  structured.py
examples/reference_runtime/analysis/: __init__.py  analyzer.py  prompts.py  schemas.py
examples/reference_runtime/api/: demo_runner.py  deps.py  errors.py  router.py  schemas.py
examples/reference_runtime/db/: base.py
examples/reference_runtime/planner/: planner.py  schemas.py
examples/reference_runtime/retriever/: __init__.py  chunker.py  embeddings.py  qdrant_store.py  registry.py  (+2 more)
protocol/: README.md  execution-event.schema.json
scripts/: migrate_local_data_to_supabase.py
sentinelai/: __init__.py
sentinelai/contracts/: __init__.py  execution.py  tracing.py
sentinelai/execution/: __init__.py  active.py  context.py  schemas.py
sentinelai/execution_stream/: __init__.py  event.py  publisher.py  schemas.py  stream.py  subscriber.py
sentinelai/plugins/: __init__.py  protocol.py
sentinelai/ports/: __init__.py  storage.py
sentinelai/repositories/: __init__.py  execution_lifecycle_repository.py  execution_repository.py  trace_repository.py
sentinelai/sdk/: __init__.py  configure.py  correlation.py  instrumentation.py  metadata.py  observe_execution.py
sentinelai/storage/: __init__.py
sentinelai/tracing/: __init__.py  context.py  decorators.py  observe.py  schemas.py  tracer.py
sentinelai_platform/: __init__.py  projections.py
sentinelai_platform/analytics/: __init__.py
sentinelai_platform/api/: __init__.py  app.py  auth.py  cors.py  demo.py  deps.py  errors.py  router.py  schemas.py  trace_views.py  v1.py
sentinelai_platform/dashboard/: __init__.py
sentinelai_platform/evaluation/: __init__.py
sentinelai_platform/event_subscribers/: __init__.py  execution.py  registration.py  trace.py
sentinelai_platform/execution_store/: __init__.py  trace_persister.py
sentinelai_platform/persistence/: __init__.py
sentinelai_platform/ports/: __init__.py  storage.py
sentinelai_platform/replay/: __init__.py
sentinelai_platform/repositories/: __init__.py  execution.py  trace.py
sentinelai_platform/storage/: __init__.py  local_provider.py  supabase_provider.py
tests/: test_architecture_dependencies.py  test_execution_context.py  test_execution_stream.py  test_model_plugs.py  test_observe_execution.py  test_optional_adapters.py  test_package_wheel.py  test_platform_auth.py  test_platform_dashboard_api.py  test_platform_demo.py  test_platform_event_subscribers.py  test_public_api.py  test_reference_runtime_observe_integration.py  test_reference_runtime_smoke.py  test_structured_parse.py
(+31 files in other folders)
