[project]
name = "ai-observability-platform"
version = "0.1.0"
description = "AI observability learning project: OpenRouter, structured outputs, planner, tracing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5",
    "fastapi>=0.115",
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "sentence-transformers>=3.0",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "mypy>=1.11",
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["app"]

[[tool.mypy.overrides]]
module = [
    "chromadb",
    "chromadb.*",
    "sentence_transformers",
    "sentence_transformers.*",
]
ignore_missing_imports = true
