[project]
name = "sentinelai"
version = "2.0.0"
description = "SentinelAI — AI Execution Intelligence Platform SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "PyJWT>=2.0",
    "uvicorn[standard]>=0.32",
]
postgres = [
    "alembic>=1.13",
    "asyncpg>=0.29",
    "python-dotenv>=1.0",
    "sqlalchemy[asyncio]>=2.0",
]
supabase = [
    "supabase>=2.0",
]
platform = [
    "sentinelai[api,postgres,supabase]",
]
reference = [
    "sentinelai[platform]",
    "httpx>=0.27",
    "qdrant-client>=1.11",
    "sentence-transformers>=3.0",
]
dev = [
    "hatchling>=1.25",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentinelai", "sentinelai_platform"]
exclude = [
    "app",
    "examples",
    "tests",
    "docs",
    "scripts",
    "samples",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.venv",
    "/traces",
    "/storage",
    "/chroma_data",
]

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    "sentinelai_platform/persistence/postgres/migrations",
    "examples/reference_runtime/db/migrations",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["sentinelai", "sentinelai_platform", "examples"]

[[tool.mypy.overrides]]
module = [
    "qdrant_client",
    "qdrant_client.*",
    "sentence_transformers",
    "sentence_transformers.*",
    "supabase",
    "supabase.*",
    "storage3",
    "storage3.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
